# Air-Trap

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakeUserPresets.json  Doxyfile  README.md  SMART_COMMIT_GUIDE.md  conanfile.py  conanfile.txt  format.sh  install-hooks.sh  r-type_client.new  smart-commit.sh
client/: CMakeLists.txt  README.md
client/include/Client/Core/: Application.hpp
client/include/Client/Graphics/: AssetManager.hpp
client/include/Client/Systems/: RenderSystem.hpp
client/include/Core/: Application.hpp  Settings.hpp
client/include/Game/: AssetManager.hpp  EnemyBuilder.hpp  EntityBuilder.hpp  SpriteCustomizer.hpp
client/include/Interfaces/: IScene.hpp
client/include/Mod/: ModManager.hpp
client/include/Network/: ClientNetwork.hpp
client/include/Scenes/: CreateRoomScene.hpp  GameOverScene.hpp  GamepadSettingsScene.hpp  KeyBindingScene.hpp  LobbyScene.hpp  LoginScene.hpp  MenuScene.hpp  ModEditorScene.hpp  ModMenuScene.hpp  PauseScene.hpp  PlayingScene.hpp  RoomWaitingScene.hpp  SettingsScene.hpp
client/include/Systems/: AnimationSystem.hpp  AudioSystem.hpp  ClientNetworkSystem.hpp  InputSystem.hpp  MenuSystem.hpp  MovementSystem.hpp  NetworkSyncSystem.hpp  NetworkSystem.hpp  ParallaxSystem.hpp  RenderSystem.hpp  ScoreSystem.hpp  SettingsMenuSystem.hpp  ShieldSystem.hpp  TranslationManager.hpp  UIRenderSystem.hpp  UISystem.hpp
client/include/Translation/: TranslationManager.hpp
client/include/UI/: UiFactory.hpp
client/include/Utils/: DebugFlags.hpp  GameState.hpp  KeyAction.hpp
client/include/network/: NetworkClient.hpp
client/src/: main.cpp
client/src/Core/: Application.cpp  Settings.cpp
client/src/Game/: EnemyBuilder.cpp  EntityBuilder.cpp  SpriteCustomizer.cpp
client/src/Mod/: ModManager.cpp
client/src/Network/: ClientNetwork.cpp
client/src/Plugins/: CMakeLists.txt
client/src/Scenes/: CreateRoomScene.cpp  GameOverScene.cpp  GamepadSettingsScene.cpp  KeyBindingScene.cpp  LobbyScene.cpp  LoginScene.cpp  MenuScene.cpp  ModEditorScene.cpp  ModMenuScene.cpp  PauseScene.cpp  PlayingScene.cpp  RoomWaitingScene.cpp  SettingsScene.cpp
client/src/Systems/: AudioSystem.cpp  ClientNetworkSystem.cpp  InputSystem.cpp  MenuSystem.cpp  NetworkSyncSystem.cpp  RenderSystem.cpp  SettingsMenuSystem.cpp  ShieldSystem.cpp  TranslationManager.cpp  UIRenderSystem.cpp  UISystem.cpp
client/src/Translation/: TranslationManager.cpp
client/src/UI/: UiFactory.cpp
common/: CMakeLists.txt  README.md
common/assets/levels/: level_01.json  level_02.json  level_03.json  level_04.json
common/assets/levels/geometry/: level_01_tiles.json
common/assets/templates/enemy/: fighter_01.json
common/ecs/: Entity.hpp
common/include/RType/: Assert.hpp  Error.hpp  Error.inl  Error.tpp  LogLevel.hpp  LogLevel.inl  Logger.hpp  Logger.tpp
common/include/RType/Config/: README.md  SimpleJsonParser.hpp  SpriteMapConfig.hpp  WeaponConfig.hpp
common/include/RType/ECS/: Component.hpp  ComponentArray.hpp  ComponentConcept.hpp  ComponentManager.hpp  Coordinator.hpp  Entity.hpp  Entity.inl  EntityManager.hpp  ISystem.hpp  Registry.hpp  Registry.tpp  Signature.hpp  SparseArray.hpp  SparseArray.tpp  SystemConcept.hpp  SystemManager.hpp  SystemManager.tpp  Types.hpp  ZipView.hpp
common/include/RType/Event/: EventManager.hpp  EventManager.tpp  IEvent.hpp
common/include/RType/Math/: Vec.hpp  Vec2.hpp  Vec2.tpp  Vec3.hpp  Vec3.tpp  Vec4.hpp  Vec4.tpp  vec2f.hpp
common/include/RType/Network/: IEventPublisher.hpp  INetwork.hpp  NetworkManager.hpp  Packet.hpp  Packet.tpp  Session.hpp
common/include/RType/System/: DynamicLibrary.hpp  DynamicLibrary.tpp  LibraryManager.hpp
common/include/RType/Thread/: ThreadPool.hpp  ThreadPool.tpp
common/include/ecs/: Registry.hpp
common/include/events/: EventBus.hpp
common/include/network/: Protocol.hpp  UdpSocket.hpp
common/src/: Error.cpp  Error_Unix.cpp  Error_Win.cpp  Logger.cpp
common/src/ECS/: Registry.cpp  SystemManager.cpp
common/src/Event/: EventManager.cpp
common/src/Network/: Packet.cpp  Session.cpp
common/src/System/: DynamicLibrary.cpp  LibraryBackend.hpp  LibraryBackend_Unix.cpp  LibraryBackend_Win.cpp  LibraryManager.cpp
common/src/Thread/: ThreadPool.cpp
new_rtype/: CMakeLists.txt
new_rtype/engine/: CMakeLists.txt  config.json
new_rtype/engine/src/: main.cpp
new_rtype/games/mario/: CMakeLists.txt
new_rtype/games/rtype/: CMakeLists.txt  config.yml
new_rtype/plugins/script_lua/: CMakeLists.txt
new_rtype/runtime/: CMakeLists.txt  engine_runtime
new_rtype/runtime/src/: main.cpp
new_rtype/scripts/: build.sh
server/: CMakeLists.txt  README.md
server/include/Game/: GameManager.hpp  LevelData.hpp  Player.hpp  Room.hpp
server/include/Network/: Network.hpp  ServerNetworkManager.hpp
server/include/ServerNetwork/: ServerNetwork.hpp
server/include/Systems/: AuthSystem.hpp  BoomerangSystem.hpp  BulletCleanupSystem.hpp  CollisionSystem.hpp  EnemyAISystem.hpp  EnemyShootSystem.hpp  EntitySystem.hpp  GameLogicSystem.hpp  HomingSystem.hpp  LevelSystem.hpp  LifetimeSystem.hpp  MovementSystem.hpp  NetworkSyncSystem.hpp  PhysicsSystem.hpp  PlayerMouvementSystem.hpp  PlayerShootSystem.hpp  PlayerSystem.hpp  RoomSystem.hpp  ServerNetworkSystem.hpp
server/include/network/: NetworkServer.hpp
server/src/: main.cpp
server/src/Game/: GameManager.cpp  LevelData.cpp  Player.cpp  Room.cpp
server/src/Network/: Network.cpp
server/src/ServerNetwork/: ServerNetwork.cpp
server/src/Systems/: AuthSystem.cpp  BoomerangSystem.cpp  BulletCleanupSystem.cpp  CollisionSystem.cpp  EnemyAISystem.cpp  EnemyShootSystem.cpp  EntitySystem.cpp  HomingSystem.cpp  LevelSystem.cpp  LifetimeSystem.cpp  MovementSystem.cpp  NetworkSyncSystem.cpp  PlayerMouvementSystem.cpp  PlayerShootSystem.cpp  PlayerSystem.cpp  RoomSystem.cpp  ServerNetworkSystem.cpp  test_sparsearray.cpp
tests/: CMakeLists.txt  README.md
tests/ecs/: test_components.cpp  test_registry.cpp  test_sparsearray.cpp  test_zipview.cpp
tests/logger/: test_logger.cpp
tests/network/: test_protocol.cpp
(+3190 files in other folders)
