##
## EPITECH PROJECT, 2025
## R-Type
## File description:
## CMakeLists.txt, Root CMake configuration
##

cmake_minimum_required(VERSION 3.20)
project(RType VERSION 1.0.0 LANGUAGES CXX)

# --- GLOBAL CONFIGURATION ---
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

# --- SUBDIRECTORIES ---
# WATCH OUT THE ORDER, COMMON MUST BE FIRST
add_subdirectory(common)
add_subdirectory(server)
add_subdirectory(client)
