# add_executable(mario_game)

# target_sources(mario_game PRIVATE
#     src/GameModule.cpp
#     src/systems/MovementSystem.cpp
#     src/systems/PhysicsSystem.cpp
#     src/scenes/PlayingScene.cpp
# )

# target_include_directories(mario_game PRIVATE
#     ${CMAKE_CURRENT_SOURCE_DIR}/include
#     ${CMAKE_SOURCE_DIR}/engine/include
# )

# target_link_libraries(mario_game PRIVATE engine_core)
