# add_executable(rtype_game)

# target_sources(rtype_game PRIVATE
#     src/GameModule.cpp
#     src/systems/MovementSystem.cpp
#     src/systems/CombatSystem.cpp
#     src/scenes/PlayingScene.cpp
# )

# target_include_directories(rtype_game PRIVATE
#     ${CMAKE_CURRENT_SOURCE_DIR}/include
#     ${CMAKE_SOURCE_DIR}/engine/include
# )

# target_link_libraries(rtype_game PRIVATE engine_core)
